# multidrone_stack-master_pv

./: .gitignore  README.md  handeye_calibration.txt  multidrone_stack.code-workspace  path.yaml  set_ros_ip.sh
.devcontainer/: Dockerfile  README.md  UserConfig.txt  devcontainer.json
src/Onboard-SDK-ROS/dji_sdk/launch/: sdk_manifold.launch
src/Onboard-SDK-ROS/dji_sdk_demo/launch/: client_with_manifold.launch
src/Onboard-SDK-ROS/dji_sdk_demo/src/: client.cpp
src/Onboard-SDK-ROS/dji_sdk_doc/: Appendix.md
src/airsim_drone_control/: CMakeLists.txt  README.md  package.xml
src/airsim_drone_control/include/airsim_drone_control/: pd_controller.h
src/airsim_drone_control/launch/: everything.launch  image_topic_to_jpegs.launch
src/airsim_drone_control/src/: broadcast_actual_camera_info.cc  ground_truth_relative_tag_pose.cc  move_drone_along_trajectory.cc  pd_controller.cpp
src/airsim_ros_pkgs/: CMakeLists.txt
src/airsim_ros_pkgs/launch/: airsim_node.launch  static_transforms.launch
src/aprilslam/: README_abridged.md
src/aprilslam/aprilslam/: CMakeLists.txt
src/aprilslam/aprilslam/cmake/: Findgtsam.cmake
src/aprilslam/aprilslam/config/: apriltag.rviz
src/aprilslam/aprilslam/launch/: detector.launch  slam.launch
src/aprilslam/aprilslam/src/mapper/: mapper.cpp
src/aprilslam/apriltag_mit/src/: GrayModel.cc  TagDetector.cc
src/phasespace/: CMakeLists.txt  apriltag_phasespace_tracker.json  package.xml  tracker_03_20_2022.json  tracker_07_07_2022.json
src/phasespace/launch/: world_to_phasespace_pub.launch
src/phasespace/src/: listener.cpp  psnode.cpp  rigid_tracker.cpp
src/rm_stuff/: CMakeLists.txt  README.md  package.xml
src/rm_stuff/config/: localization.rviz
src/rm_stuff/include/rm_stuff/: common.h  pid_controller.h
src/rm_stuff/launch/: altitude_pid.launch  lateral_pid.launch  phasespace_transform_broadcaster.launch
src/rm_stuff/msg/: LimitedVector3.msg  YawInfo.msg
src/rm_stuff/src/: calibration.cpp  common.cpp  drone_altitude_controller_node.cpp  drone_lateral_pd_controller.cpp  phasespace_to_rviz.cpp  pid_controller.cpp
